# VEED-Hackathon

./: .env.example  .gitignore  .gitmodules  PRESENTATION_SCRIPT.md  README.md  components.json  environment.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  tsconfig.app.json  tsconfig.json  vite.config.ts
docs/: ui-integration-reference-faces.md
docs/superpowers/plans/: 2026-03-21-face-swap-crop-pipeline.md  2026-03-21-face-swap-implementation.md
docs/superpowers/specs/: 2026-03-21-face-swap-design.md  2026-03-21-frontend-ux-improvements.md
scripts/: bootstrap_veed_env.sh  prewarm_demo_cache.py  start.sh
server/: config.py  dummy-coordinate-gen.py  insightface_video_data__reference.json  main.py  pyproject.toml  requirements.txt
server/models/: schemas.py
server/services/: choose_source_image.py  face_swapper.py  face_tracker.py  lipsync.py  source_picker.py  video.py
server/tests/: test_face_swap.py
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src/assets/: insightface_video_data.json
src/components/: FaceSelector.tsx  Gallery.tsx  ImageEditor.tsx  MediaPreview.tsx  PartnerStrip.tsx  ProcessingStatus.tsx  TrackedImagePreview.tsx  TrackedVideoPreview.tsx  VideoPlayer.tsx  VideoPreview.tsx  VideoUploader.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  autocomplete.tsx  badge.tsx  breadcrumb.tsx  calendar.tsx  card.tsx  checkbox-group.tsx  combobox.tsx  command.tsx  dialog.tsx  field.tsx  form.tsx  frame.tsx  hover-card.tsx  input-group.tsx  kbd.tsx  pagination.tsx  popover.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  spinner.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  tooltip.tsx
src/components/ui/components/ui/: accordion.tsx  avatar.tsx  button.tsx  checkbox.tsx  collapsible.tsx  empty.tsx  fieldset.tsx  group.tsx  input.tsx  label.tsx  menu.tsx  meter.tsx  number-field.tsx  preview-card.tsx  progress.tsx  skeleton.tsx  switch.tsx  toast.tsx  toggle.tsx  toolbar.tsx
src/hooks/: use-mobile.ts
src/lib/utils/: api.ts
tests/: test.py  test_api.py  test_face_swapper.py  test_face_tracker.py  test_optimizations.py  test_schemas.py  test_video_service.py
