[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veed-face-swap"
version = "0.1.0"
description = "Video face swap tool using InsightFace"
requires-python = ">=3.11,<3.13"

dependencies = [
    "pydantic>=2.11.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "fastapi",
    "uvicorn",
    "insightface>=0.7.3",
    "onnx>=1.16.0,<2",
    "onnxruntime>=1.17.0",
    "opencv-python>=4.9.0",
    "numpy>=2.2.1,<3",
    "scipy>=1.10.0,<2",
    "tqdm>=4.67.0,<5",
    "python-multipart>=0.0.9",
    "fal-client>=0.5.0",
    "movie-like-shots>=0.1.0",
    "ml_dtypes>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["models", "models.*", "services", "services.*"]

[tool.uv.sources]
movie-like-shots = { path = "../face-detect-track", editable = true }
